# AutoVerifEmail_Langchain

./: .env.example  .gitignore  README.md  check_env.py  main.py  pyproject.toml
graph/: graph_builder.py  state.py
graph/nodes/: alert.py  analyze.py  chunk.py  collect.py  filter_route.py  format_digest.py  send.py  summarize.py  validate.py
services/: evolution_client.py  gmail_client.py  smtp_client.py
skills/: email_analysis.md
