[project]
name = "auto-verif-email-langchain"
version = "0.1.0"
description = "Agente automatizado de triagem de e-mails com LangGraph e LangChain"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-api-python-client>=2.0",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]
